--- a/src/components/Cockpit/Cockpit.css
+++ b/src/components/Cockpit/Cockpit.css
@@ -6,7 +6,7 @@
   font-weight: bold;
 }
 
-.Cockpit button {
+.Button {
   background-color: green;
   color: white;
   font: inherit;
@@ -15,16 +15,16 @@
   cursor: pointer;
 }
 
-.Cockpit button:hover {
+.Button:hover {
   background-color: lightgreen;
   color: black;
 }
 
-.Cockpit button.red {
+.Button.red {
   background-color: red;
 }
 
-.Cockpit button.red:hover {
+.Button.red:hover {
   background-color: salmon;
   color: black;
 }
